[package]
name = "voxel-dags"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
description = "Collections of data structures to manage Voxels"
readme = "README.md"
documentation = "https://docs.rs/voxel-dags/"
repository = "https://github.com/naomijub/voxel-dags"
keywords = ["Voxel", "tree", "dag"]

[lib]
name = "voxel_dags"
path = "src/lib.rs"

[dependencies]
nalgebra = "0.32"
num-traits = "*"
ron = "0.8"
serde = "*"
serde_derive = "*"
env_logger = "0.10"
simplelog = "0.12"
log = "*"
shared_memory = "0.12"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", default-features = false, features = ["fs", "mman"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
win-sys = "0.3"